--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -2,9 +2,6 @@
 
 =head1 NAME
 
-[ this is a template for a new perldelta file.  Any text flagged as XXX needs
-to be processed before release. ]
-
 perldelta - what is new for perl v5.25.7
 
 =head1 DESCRIPTION
@@ -16,12 +13,6 @@ If you are upgrading from an earlier release such as 5.25.5, first read
 L<perl5256delta>, which describes differences between 5.25.5 and 5.25.6.
 
 =head1 Core Enhancements
-
-XXX New core language features go here.  Summarize user-visible core language
-enhancements.  Particularly prominent performance optimisations could go
-here, but most should go in the L</Performance Enhancements> section.
-
-[ List each enhancement as a =head2 entry ]
 
 =head2 Indented Here-documents
 
@@ -87,11 +78,6 @@ ${^CAPTURE}[0].
 
 %{^CAPTURE_ALL} is the equivalent to %- (ie all named captures).
 
-=head2 hv.h: rework HEK_FLAGS to a proper member in struct hek
-
-Move the store of HEK_FLAGS off the end of the allocated hek_key into the hek
-struct, simplifying access and providing clarity to the code.
-
 =head2 op.c: silence compiler warning in fold_constants()
 
     op.c: In function ‘S_fold_constants’:
@@ -101,105 +87,7 @@ struct, simplifying access and providing clarity to the code.
 
 This warning has been silenced.
 
-=head2 White space changed to avoid C++ deprecation warning
-
-C++11 requires space between the end of a string literal and a macro, so that a
-feature can unambiguously be added to the language.  Starting in g++ 6.2, the
-compiler emits a warning when there isn't a space (presumably so that future
-versions can support C++11)
-
-=head1 Security
-
-XXX Any security-related notices go here.  In particular, any security
-vulnerabilities closed should be noted here rather than in the
-L</Selected Bug Fixes> section.
-
-[ List each security issue as a =head2 entry ]
-
-=head1 Incompatible Changes
-
-XXX For a release on a stable branch, this section aspires to be:
-
-    There are no changes intentionally incompatible with 5.XXX.XXX
-    If any exist, they are bugs, and we request that you submit a
-    report.  See L</Reporting Bugs> below.
-
-[ List each incompatible change as a =head2 entry ]
-
-=head2 Eliminate OPpRUNTIME private PMOP flag
-
-This flag was added in 5.004 and even then it didn't seem to be used for
-anything. It gets set and unset in various places, but is never tested.
-
-=head2 Eliminate SVpbm_VALID flag
-
-This flag is set on an SV to indicate that it has PERL_MAGIC_bm (fast
-Boyer-Moore) magic attached. Instead just directly check whether it has such
-magic.
-
-=head2 Eliminate SVpbm_TAIL/SvTAIL_on()/SvTAIL_off()
-
-This flag is only set on SVs that have Boyer-Moore magic attached. Such SVs
-already re-purpose the unused IVX slot of that  SV to store BmUSEFUL. This
-commit repurposes the unused NVX slot to store this boolean value instead.
-
-=head2 Eliminate SVrepl_EVAL and SvEVALED()
-
-This flag is only used to indicate that the SV holding the text of the
-replacement part of a s/// has seen at least one /e.  Instead, set the IVX
-field in the SV to a true value. (We already set the NVX field on that SV to
-indicate a multi-src-line substitution).
-
-=head2 metaconfig.h
-
-Document that symbols should be removed from metaconfig.h
-
-Remove almost-all symbols from metaconfig.h
-
-=head2 Change hv_fetch(…, "…", …, …) to hv_fetchs(…, "…", …)
-
-The dual-life dists all use Devel::PPPort, so they can use this function even
-though it was only added in 5.10.
-
-=head1 Deprecations
-
-XXX Any deprecated features, syntax, modules etc. should be listed here.
-
-=head2 Module removals
-
-XXX Remove this section if inapplicable.
-
-The following modules will be removed from the core distribution in a
-future release, and will at that time need to be installed from CPAN.
-Distributions on CPAN which require these modules will need to list them as
-prerequisites.
-
-The core versions of these modules will now issue C<"deprecated">-category
-warnings to alert you to this fact.  To silence these deprecation warnings,
-install the modules in question from CPAN.
-
-Note that these are (with rare exceptions) fine modules that you are encouraged
-to continue to use.  Their disinclusion from core primarily hinges on their
-necessity to bootstrapping a fully functional, CPAN-capable Perl installation,
-not usually on concerns over their design.
-
-=over
-
-=item XXX
-
-XXX Note that deprecated modules should be listed here even if they are listed
-as an updated module in the L</Modules and Pragmata> section.
-
-=back
-
-[ List each other deprecation as a =head2 entry ]
-
 =head1 Performance Enhancements
-
-XXX Changes which enhance performance without changing behaviour go here.
-There may well be none in a stable release.
-
-[ List each enhancement as a =item entry ]
 
 =over 4
 
@@ -226,7 +114,7 @@ Reduce the number of odd special cases for the SvSCREAM flag.
 
 =item *
 
-Aavoid sv_catpvn() in do_vop() when unneeded.
+Avoid sv_catpvn() in do_vop() when unneeded.
 
 =item *
 
@@ -243,24 +131,6 @@ Better optimise array and hash assignment
 =back
 
 =head1 Modules and Pragmata
-
-XXX All changes to installed files in F<cpan/>, F<dist/>, F<ext/> and F<lib/>
-go here.  If Module::CoreList is updated, generate an initial draft of the
-following sections using F<Porting/corelist-perldelta.pl>.  A paragraph summary
-for important changes should then be added by hand.  In an ideal world,
-dual-life modules would have a F<Changes> file that could be cribbed.
-
-[ Within each section, list entries as a =item entry ]
-
-=head2 New Modules and Pragmata
-
-=over 4
-
-=item *
-
-XXX
-
-=back
 
 =head2 Updated Modules and Pragmata
 
@@ -345,40 +215,11 @@ using it to get the information contained in F<unicore/Name.pl>.  It has
 long been deprecated to use any file from F<unicore/>, and their
 contents or even existence may change at any time without notice.
 
-=item *
-
-L<XXX> has been upgraded from version A.xx to B.yy.
-
-=back
-
-=head2 Removed Modules and Pragmata
-
-=over 4
-
-=item *
-
-XXX
-
 =back
 
 =head1 Documentation
 
-XXX Changes to files in F<pod/> go here.  Consider grouping entries by
-file and be sure to link to the appropriate page, e.g. L<perlfunc>.
-
-=head2 New Documentation
-
-XXX Changes which create B<new> files in F<pod/> go here.
-
-=head3 L<XXX>
-
-XXX Description of the purpose of the new file here
-
 =head2 Changes to Existing Documentation
-
-XXX Changes which significantly change existing files in F<pod/> go here.
-However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
-section.
 
 =head3 L<perlfunc>
 
@@ -500,23 +341,7 @@ Document Tab VS Space.
 
 =item *
 
-Don't impugn the stability of all (?…) constructs.
-
-=item *
-
-Summarise full syntax for (?(cond)then|else) constructs.
-
-=item *
-
-Minor tweaks and formatting changes.
-
-=item *
-
-perlre: regularise list items
-
-=item *
-
-Document the package for C<$REGMARK> and C<$REGERROR>.
+Several minor enhancements to the documentation.
 
 =back
 
@@ -526,37 +351,7 @@ The following additions or changes have been made to diagnostic output,
 including warnings and fatal error messages.  For the complete list of
 diagnostic messages, see L<perldiag>.
 
-XXX New or changed warnings emitted by the core's C<C> code go here.  Also
-include any changes in L<perldiag> that reconcile it to the C<C> code.
-
-=head2 New Diagnostics
-
-XXX Newly added diagnostic messages go under here, separated into New Errors
-and New Warnings
-
-=head3 New Errors
-
-=over 4
-
-=item *
-
-XXX L<message|perldiag/"message">
-
-=back
-
-=head3 New Warnings
-
-=over 4
-
-=item *
-
-XXX L<message|perldiag/"message">
-
-=back
-
 =head2 Changes to Existing Diagnostics
-
-XXX Changes (i.e. rewording) of diagnostic messages go here
 
 =over 4
 
@@ -578,15 +373,6 @@ warnings were under 'deprecated' previously.
 =back
 
 =head1 Utility Changes
-
-XXX Changes to installed programs such as F<perlbug> and F<xsubpp> go here.
-Most of these are built within the directory F<utils>.
-
-[ List utility changes as a =head2 entry for each utility and =item
-entries for each change
-Use L<XXX> with program names to get proper documentation linking. ]
-
-=head2 L<XXX>
 
 =over 4
 
@@ -626,13 +412,6 @@ Avoid infinite loop for enums.
 
 =head1 Configuration and Compilation
 
-XXX Changes to F<Configure>, F<installperl>, F<installman>, and analogous tools
-go here.  Any other changes to the Perl build process should be listed here.
-However, any platform-specific changes should be listed in the
-L</Platform Support> section, instead.
-
-[ List changes as a =item entry ].
-
 =over 4
 
 =item *
@@ -663,17 +442,14 @@ Configure: signbit scan was assuming too much, stop assuming negative 0.
 
 Various compiler warnings have been silenced.
 
+=item *
+
+Several smaller changes have been made to remove impediments to compiling under
+C++11.
+
 =back
 
 =head1 Testing
-
-XXX Any significant changes to the testing of a freshly built perl should be
-listed here.  Changes which create B<new> files in F<t/> go here as do any
-large changes to the testing harness (e.g. when parallel testing was added).
-Changes to existing files in F<t/> aren't worth summarizing, although the bugs
-that they represent may be covered elsewhere.
-
-[ List each test improvement as a =item entry ]
 
 =over 4
 
@@ -689,23 +465,9 @@ Tests for locales were erroneously using locales incompatible with Perl.
 
 =head1 Platform Support
 
-XXX Any changes to platform support should be listed in the sections below.
-
-[ Within the sections, list each platform as a =item entry with specific
-changes as paragraphs below it. ]
-
-=head2 New Platforms
-
-XXX List any platforms that this version of perl compiles on, that previous
-versions did not.  These will either be enabled by new files in the F<hints/>
-directories, or new subdirectories and F<README> files at the top level of the
-source tree.
+=head2 Platform-Specific Notes
 
 =over 4
-
-=item XXX-some-platform
-
-XXX
 
 =item Darwin
 
@@ -718,7 +480,7 @@ Finish removing POSIX deprecated functions.
 
 =item OS X
 
-OS X El Capitan doesn't implement the clock_gettime() or clock_getrez() APIs,
+OS X El Capitan doesn't implement the clock_gettime() or clock_getres() APIs,
 emulate them as necessary.
 
 =item macOS
@@ -737,6 +499,10 @@ L<Net::Ping> UDP test is skipped on HP-UX.
 
 Move _pDEPTH and _aDEPTH after config.h otherwise DEBUGGING may not be defined
 yet.
+
+VAXC has not been a possibility for a good long while, and the versions of the
+DEC/Compaq/HP/VSI C compiler that report themselves as "DEC" in a listing file
+are 15 years or more out-of-date and can be safely desupported.
 
 =item VMS And Win32
 
@@ -768,61 +534,27 @@ t/uni/overload.t: Skip hanging test on FreeBSD.
 
 =back
 
-=head2 Discontinued Platforms
-
-XXX List any platforms that this version of perl no longer compiles on.
-
-=over 4
-
-=item VMS
-
-VAXC has not been a possibility for a good long while, and the versions of the
-DEC/Compaq/HP/VSI C compiler that report themselves as "DEC" in a listing file
-are 15 years or more out-of-date and can be safely desupported.
-
-=item XXX-some-platform
-
-XXX
-
-=back
-
-=head2 Platform-Specific Notes
-
-XXX List any changes for specific platforms.  This could include configuration
-and compilation changes or changes in portability/compatibility.  However,
-changes within modules for platforms should generally be listed in the
-L</Modules and Pragmata> section.
-
-=over 4
-
-=item XXX-some-platform
-
-XXX
-
-=back
-
 =head1 Internal Changes
-
-XXX Changes which affect the interface available to C<XS> code go here.  Other
-significant internal changes for future core maintainers should be noted as
-well.
-
-[ List each change as a =item entry ]
 
 =over 4
 
 =item *
 
-XXX
+The meanings of some internal SV flags have been changed
+
+OPpRUNTIME, SVpbm_VALID, SVpbm_TAIL, SvTAIL_on, SvTAIL_off, SVrepl_EVAL,
+SvEVALED
+
+=item *
+
+Change C<hv_fetch(…, "…", …, …)> to C<hv_fetchs(…, "…", …)>
+
+The dual-life dists all use Devel::PPPort, so they can use this function even
+though it was only added in 5.10.
 
 =back
 
 =head1 Selected Bug Fixes
-
-XXX Important bug fixes in the core language are summarized here.  Bug fixes in
-files in F<ext/> and F<lib/> are best summarized in L</Modules and Pragmata>.
-
-[ List each fix as a =item entry ]
 
 =over 4
 
@@ -892,43 +624,37 @@ short UTF-8 character at the end.
 
 =back
 
-=head1 Known Problems
-
-XXX Descriptions of platform agnostic bugs we know we can't fix go here.  Any
-tests that had to be C<TODO>ed for the release would be noted here.  Unfixed
-platform specific bugs also go here.
-
-[ List each fix as a =item entry ]
-
-=over 4
-
-=item *
-
-XXX
-
-=back
-
-=head1 Errata From Previous Releases
-
-=over 4
-
-=item *
-
-XXX Add anything here that we forgot to add, or were mistaken about, in
-the perldelta of a previous release.
-
-=back
-
-=head1 Obituary
-
-XXX If any significant core contributor has died, we've added a short obituary
-here.
-
 =head1 Acknowledgements
 
-XXX Generate this with:
+Perl 5.25.7 represents approximately 4 weeks of development since Perl 5.25.6
+and contains approximately 83,000 lines of changes across 630 files from 26
+authors.
 
-  perl Porting/acknowledgements.pl v5.25.5..HEAD
+Excluding auto-generated files, documentation and release tools, there were
+approximately 13,000 lines of changes to 340 .pm, .t, .c and .h files.
+
+Perl continues to flourish into its third decade thanks to a vibrant community
+of users and developers. The following people are known to have contributed the
+improvements that became Perl 5.25.7:
+
+Aaron Crane, Abigail, Andrew Fresh, Andy Lester, Aristotle Pagaltzis, Chad
+Granum, Chris 'BinGOs' Williams, Craig A. Berry, Dagfinn Ilmari Mannsåker, Dan
+Collins, Dave Rolsky, David Mitchell, Hauke D, H.Merijn Brand, Hugo van der
+Sanden, James E Keenan, Jarkko Hietaniemi, Karl Williamson, Lukas Mai, Matthew
+Horsfall, Nicolas R., Stefan Seifert, Steve Hay, Todd Rinaldo, Tony Cook, Yves
+Orton.
+
+The list above is almost certainly incomplete as it is automatically generated
+from version control history. In particular, it does not include the names of
+the (very much appreciated) contributors who reported issues to the Perl bug
+tracker.
+
+Many of the changes included in this version originated in the CPAN modules
+included in Perl's core. We're grateful to the entire CPAN community for
+helping Perl to flourish.
+
+For a more complete list of all of Perl's historical contributors, please see
+the F<AUTHORS> file in the Perl source distribution.
 
 =head1 Reporting Bugs
 
