Use of Unicode code points exceeding IV_MAX will be fatal in Perl 5.28
Changed the warning to reflect the deadline of this deprecation.
Update tests, perldiag.pod and added a section to perldeprecation.pod.

--- a/pod/perldiag.pod
+++ b/pod/perldiag.pod
@@ -6903,7 +6903,7 @@ modifier is not presently meaningful in substitutions.
 use the /g modifier.  Currently, /c is meaningful only when /g is
 used.  (This may change in the future.)
 
-=item Use of code point 0x%s is deprecated; the permissible max is 0x%s
+=item Use of code point 0x%s is deprecated; the permissible max is 0x%s. This will be fatal in Perl 5.28
 
 (D deprecated) You used a code point that will not be allowed in a
 future perl version, because it is too large.  Unicode only allows code
@@ -6919,6 +6919,9 @@ things aren't working correctly, you probably have found one of these.
 If your code is to run on various platforms, keep in mind that the upper
 limit depends on the platform.  It is much larger on 64-bit word sizes
 than 32-bit ones.
+
+The use of out of range code points was deprecated in Perl 5.24, and
+it will be a fatal error in Perl 5.28.
 
 =item Use of comma-less variable list is deprecated
 
