--- a/pod/perldiag.pod
+++ b/pod/perldiag.pod
@@ -6980,10 +6980,12 @@ middle of an iteration causes Perl to see a freed value.
 operator.  Since C<split> always tries to match the pattern
 repeatedly, the C</g> has no effect.
 
-=item Use of "goto" to jump into a construct is deprecated
+=item Use of "goto" to jump into a construct is deprecated. Its use will be fatal in Perl 5.28
 
 (D deprecated) Using C<goto> to jump from an outer scope into an inner
 scope is deprecated and should be avoided.
+
+This was deprecated in Perl 5.12, and will be a fatal error in Perl 5.28.
 
 =item Use of inherited AUTOLOAD for non-method %s() is deprecated
 
