Die on malformed isFOO_utf8() input
At the p5p core hackathon in November 2016, it was decided to make the
previous deprecation message fatal for malformed input passed to the
isFOO_utf8() macros and friends.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -327,7 +327,8 @@ well.
 
 =item *
 
-XXX
+Calling macros like C<isALPHA_utf8> on malformed UTF-8 have issued a
+deprecation warning since Perl v5.18.  They now die.
 
 =back
 
