--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -138,6 +138,10 @@ XXX
 
 L<XXX> has been upgraded from version A.xx to B.yy.
 
+=item *
+
+L<Pod::Simple> has been upgraded from version 3.32 to 3.35.
+
 =back
 
 =head2 Removed Modules and Pragmata
