Don't assume input to case change macros is valid
Experience has shown that they can be invalid, and this commit now checks
for that.  Further checking will be done in the next commit

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -339,6 +339,7 @@ L<perlapi/Character classification>.
 
 Calling macros like C<isALPHA_utf8> on malformed UTF-8 have issued a
 deprecation warning since Perl v5.18.  They now die.
+Similarly, macros like C<toLOWER_utf8> on malformed UTF-8 now die.
 
 =item *
 
