--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -273,7 +273,7 @@ and C<Inf> to make builds more reproducible. [perl #130133]
 Since 5.18 for testing purposes we have included support for
 building perl with a variety of non-standard, and non-recommended
 hash functions. Since we do not recommend the use of these functions
-we have removed them and their corresponding build options. Spefically
+we have removed them and their corresponding build options. Specifically
 this includes the following build options:
 
     PERL_HASH_FUNC_SDBM
